force-app/main/default/objects/AI_Builder_Session__c/AI_Builder_Session__c.object-meta.xml
<CustomObject>
    <description>Tracks a Copado Builder chat session from idea through deploy.</description>
    <label>AI Builder Session</label>
    <nameField>
        <label>Session Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AI Builder Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>