force-app/main/default/objects/AI_Builder_Session__c/fields/Artifact_Content_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>Artifact_Content_Document_Id__c</fullName>
    <description>ContentDocument Id for the last generated metadata package JSON</description>
    <label>Artifact Content Document Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>