force-app/main/default/objects/AI_Builder_Session__c/fields/Build_Package_Json__c.field-meta.xml
<CustomField>
    <fullName>Build_Package_Json__c</fullName>
    <description>Latest AI-generated metadata package JSON (truncated if too large)</description>
    <label>Build Package JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>