force-app/main/default/objects/AI_Builder_Session__c/fields/Copado_User_Story__c.field-meta.xml
<CustomField>
    <fullName>Copado_User_Story__c</fullName>
    <label>Copado User Story</label>
    <length>255</length>
    <type>Text</type>
</CustomField>