force-app/main/default/objects/AI_Builder_Session__c/fields/Dialogue_Id__c.field-meta.xml
<CustomField>
    <fullName>Dialogue_Id__c</fullName>
    <label>Dialogue Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>