force-app/main/default/objects/AI_Builder_Session__c/fields/Last_Build_Id__c.field-meta.xml
<CustomField>
    <fullName>Last_Build_Id__c</fullName>
    <label>Last Build Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>