force-app/main/default/objects/AI_Builder_Session__c/fields/Last_Commit_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Last_Commit_Job_Id__c</fullName>
    <description>Last Copado Job Execution Id from Builder Commit (sfdx_commit_1).</description>
    <label>Last Commit Job Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>