force-app/main/default/objects/AI_Builder_Session__c/fields/Last_Deploy_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Last_Deploy_Job_Id__c</fullName>
    <description>Last Copado Job Execution Id from Builder Deploy (package to Dev).</description>
    <label>Last Deploy Job Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>