force-app/main/default/objects/AI_Builder_Session__c/fields/Last_Job_Action__c.field-meta.xml
<CustomField>
    <fullName>Last_Job_Action__c</fullName>
    <description>Which Builder action started Last_Job_Id (Deploy, Commit, Validate).</description>
    <label>Last Job Action</label>
    <length>40</length>
    <type>Text</type>
</CustomField>