force-app/main/default/objects/AI_Builder_Session__c/fields/Last_Promotion_Id__c.field-meta.xml
<CustomField>
    <fullName>Last_Promotion_Id__c</fullName>
    <description>Last Copado Promotion Id created or used by Builder Validate.</description>
    <label>Last Promotion Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>