force-app/main/default/objects/AI_Builder_Session__c/fields/Org_Context_Status__c.field-meta.xml
<CustomField>
    <fullName>Org_Context_Status__c</fullName>
    <label>Org Context Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>