force-app/main/default/objects/AI_Builder_Session__c/fields/Org_Credential_Id__c.field-meta.xml
<CustomField>
    <fullName>Org_Credential_Id__c</fullName>
    <label>Org Credential Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>