force-app/main/default/objects/AI_Builder_Session__c/fields/Org_Intelligence_Integration_Id__c.field-meta.xml
<CustomField>
    <fullName>Org_Intelligence_Integration_Id__c</fullName>
    <label>Org Intelligence Integration Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>