force-app/main/default/objects/AI_Builder_Session__c/fields/Selected_Org__c.field-meta.xml
<CustomField>
    <fullName>Selected_Org__c</fullName>
    <label>Selected Org</label>
    <length>255</length>
    <type>Text</type>
</CustomField>