force-app/main/default/objects/AI_Builder_Session__c/fields/Story_Name__c.field-meta.xml
<CustomField>
    <fullName>Story_Name__c</fullName>
    <description>Copado User Story number (e.g. US-0000037)</description>
    <label>Story Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>