force-app/main/default/objects/AI_Builder_Session__c/fields/Story_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Story_Record_Id__c</fullName>
    <description>Salesforce Id of the linked copado__User_Story__c</description>
    <label>Story Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>