force-app/main/default/objects/AI_Builder_Session__c/fields/Story_Title__c.field-meta.xml
<CustomField>
    <fullName>Story_Title__c</fullName>
    <label>Story Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>